# roch_GPSR

./: LICENSE  README.md
roch_asr/: CMakeLists.txt  package.xml
roch_asr/action/: RochASR.action
roch_asr/cfg/: confirm.bnf  mission-0.bnf  mission.bnf
roch_asr/src/: asr_cmd.xml  roch_asr_client.py  roch_asr_server.cpp  speech_recognizer.c  task_con.xml
roch_gpsr/: CMakeLists.txt  README.md  package.xml
roch_gpsr/action/: SoundEffect.action  TaskRec.action
roch_gpsr/cfg/: ObjDetect.cfg
roch_gpsr/include/roch_gpsr/: common_function.h  common_include.h
roch_gpsr/launch/: gpsr_server.launch  gpsr_smach.launch  roch2_bringup.launch  roch_bringup.launch  roch_build_map.launch  rviz.launch  turtlebot_sm.launch
roch_gpsr/maps/: gpsr-2.pgm  gpsr.pgm  gpsr.xcf  gpsr.yaml  map.pgm  sawyer.pgm  sawyer_keepout.pgm  sawyer_keepout.xcf  sawyer_keepout.yaml
roch_gpsr/maps/src-lyk/: coffee_table.cpp  listen_and_publish.cpp  listen_int.cpp  nav_all_site.cpp  nav_home.cpp  nav_sawyer_office.cpp  publish_int.cpp  sendGoals.cpp  site_nav.cpp  site_nav_all.cpp  table.cpp
roch_gpsr/rviz/: GPSR.rviz
roch_gpsr/scripts/: common_function.py  common_import.py  common_param.py  detect_dooropen.py  robot_smach.py  slam_goto.py  sm_gpsr.py  sound_effect.py  st_SLAM_Move.py
roch_gpsr/src/: common_function.cpp  obj_detect_server.cpp  obj_detect_test.cpp  sound_effect_server.py  task_rec_client.py  task_rec_server.cpp
roch_tts/: CMakeLists.txt  package.xml
roch_tts/action/: RochTTS.action
roch_tts/src/: roch_tts.cpp  roch_tts_client.py
xfei_tts/: CMakeLists.txt  package.xml
xfei_tts/action/: XFeiTTS.action
xfei_tts/src/: roch_tts_client.py  tts.pcm  xfei_tts_server.cpp
